Archive2/b5/0e2c50f8004509/output
main.cpp:14:47: error: reference to overloaded function could not be resolved; did you mean to call it?
    debug_log_ignore() << " doesn't work " << std::endl;
                                              ^~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/ostream:564:5: note: possible target for call
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
main.cpp:7:25: note: candidate template ignored: couldn't infer template argument 'T'
      debug_log_ignore& operator<<(const T&) { return *this; }
                        ^
1 error generated.
